theme changes form components with bootstrap footer changes

--- a/src/main/resources/an/dpr/manteniket/template/ManteniketPage.properties
+++ b/src/main/resources/an/dpr/manteniket/template/ManteniketPage.properties
@@ -4,3 +4,6 @@ btn.delete=Delete
 btn.save=Save
 btn.return=Return
 head.actions=Actions
+author=Rikidpr
+enterprise=anDPR Soft
+description=Manteniket WebApp
