--- a/pom.xml
+++ b/pom.xml
@@ -128,10 +128,17 @@
 			<artifactId>hibernate-annotations</artifactId>
 			<version>${hibernate.version}</version>
 		</dependency>
+		<!-- DERBY 
 		<dependency>
 			<groupId>org.apache.derby</groupId>
 			<artifactId>derby</artifactId>
 			<version>10.10.1.1</version>
+		</dependency>
+		-->
+		<dependency>
+			<groupId>postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>8.4-702.jdbc3</version>
 		</dependency>
 		<!-- FIN PERSISTENCIA -->
 		
