--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,13 +1,22 @@
 log4j.rootLogger=INFO,Stdout
-log4j.logger.an.dpr=DEBUG, Stdout
+log4j.logger.an.dpr=DEBUG, Stdout, file
+log4j.logger.an.dpr=ERROR, Stdout, errorFile
 
 log4j.appender.Stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.Stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.Stdout.layout.conversionPattern=%-5p - %-26.26c{1} - %m\n
 
+log4j.appender.file=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.file.File=${catalina.base}/logs/manteniket.log
+log4j.appender.file.layout=org.apache.log4j.PatternLayout
+log4j.appender.file.layout.conversionPattern=%-5p - %-26.26c{1} - %m\n
+
+log4j.appender.errorFile=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.errorFile.File=${catalina.base}/logs/manteniket_error.log
+log4j.appender.errorFile.layout=org.apache.log4j.PatternLayout
+log4j.appender.errorFile.layout.conversionPattern=%-5p - %-26.26c{1} - %m\n
+
 #log4j.logger.org.apache.wicket=INFO
 #log4j.logger.org.apache.wicket.protocol.http.HttpSessionStore=INFO
 #log4j.logger.org.apache.wicket.version=INFO
 #log4j.logger.org.apache.wicket.RequestCycle=INFO
-
-
