solucion de problemas de direccion. logout nuevos campos actividades

--- a/src/main/resources/an/dpr/manteniket/pages/ActivitiesPage.properties
+++ b/src/main/resources/an/dpr/manteniket/pages/ActivitiesPage.properties
@@ -3,6 +3,8 @@ lbl.date=Date
 lbl.time=Time
 lbl.desc=Description
 lbl.bike=Bike
+lbl.heart.rate=Heart Rate
+lbl.type=Type
 btn.return=Return
 btn.save=Save
 btn.delete=Delete
