--- a/src/main/resources/an/dpr/manteniket/template/BootstrapHeaderPanel.properties
+++ b/src/main/resources/an/dpr/manteniket/template/BootstrapHeaderPanel.properties
@@ -1,6 +1,7 @@
 header.title=Manteniket
 header.home=Home
-menu.dropdown=Menú
-menu.activities=Actividades
-menu.bikes=Bicis
-menu.components=Componentes
+header.logout=Logout
+menu.dropdown=Menu
+menu.activities=Activities
+menu.bikes=Bikes
+menu.components=Components
