--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -7,12 +7,12 @@ log4j.appender.Stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.Stdout.layout.conversionPattern=%-5p - %-26.26c{1} - %m\n
 
 log4j.appender.file=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.file.File=${catalina.base}/logs/manteniket.log
+log4j.appender.file.File=./logs/manteniket.log
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.conversionPattern=%-5p - %-26.26c{1} - %m\n
 
 log4j.appender.errorFile=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.errorFile.File=${catalina.base}/logs/manteniket_error.log
+log4j.appender.errorFile.File=./logs/manteniket_error.log
 log4j.appender.errorFile.layout=org.apache.log4j.PatternLayout
 log4j.appender.errorFile.layout.conversionPattern=%-5p - %-26.26c{1} - %m\n
 
