mensajes confirmacion bugfixeds

--- a/src/main/resources/an/dpr/manteniket/pages/BicisListPage.properties
+++ b/src/main/resources/an/dpr/manteniket/pages/BicisListPage.properties
@@ -6,3 +6,4 @@ btn.components=Components
 btn.edit=Add
 btn.edit=Edit
 btn.delete=Delete
+delete.bike.dependencies=No se pudo borrar la bici porque tiene dependencias (actividades, componentes...)
