--- a/src/main/resources/an/dpr/manteniket/pages/ComponentsListPage.properties
+++ b/src/main/resources/an/dpr/manteniket/pages/ComponentsListPage.properties
@@ -3,3 +3,4 @@ head.name=Name
 head.type=Type
 head.km=KM
 btn.uses=Uses
+delete.component.dependencies=No se pudo borrar el componente porque tiene dependencias (usos...)
