--- a/src/main/resources/an/dpr/manteniket/template/ManteniketPage.properties
+++ b/src/main/resources/an/dpr/manteniket/template/ManteniketPage.properties
@@ -7,3 +7,4 @@ head.actions=Actions
 author=Rikidpr
 enterprise=anDPR Soft
 description=Manteniket WebApp
+delete.error=Error técnico borrando. Disculpe las molestias.
