mejoras visualizacion y filtrado

--- a/src/main/resources/an/dpr/manteniket/pages/ActivitiesSummaryPage.properties
+++ b/src/main/resources/an/dpr/manteniket/pages/ActivitiesSummaryPage.properties
@@ -6,3 +6,6 @@ lbl.time=Time
 lbl.numberActivities=Nº Activities
 btn.getData=Get Data
 compare=Compare previous year
+set.custom.dates=Set custom dates
+init.date=Init Date
+finish.date=Finish Date
