mejoras bootstrap modal panel de resultados

--- a/src/main/resources/an/dpr/manteniket/pages/ActivitiesSummaryPage.properties
+++ b/src/main/resources/an/dpr/manteniket/pages/ActivitiesSummaryPage.properties
@@ -9,3 +9,4 @@ compare=Compare previous year
 set.custom.dates=Set custom dates
 init.date=Init Date
 finish.date=Finish Date
+summary.tittle=Activities Summary
